crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-postgres_tpcds_q20.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q20"
---
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
| i_item_id        | i_item_desc                                                                                                                                                                              | i_category | i_class | i_current_price | itemrevenue | revenueratio |
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
| AAAAAAAAAAGEAAAA | Local, armed trusts might know. Right women might not like. Foreign, dark readers might flow more certain sides. Home old rivers can re                                                  | Children   | infants | 4.51            | 13327.43    | 1.562244     |
| AAAAAAAAAIBBAAAA | Crews used to visit again; followers take to a scores. Attractive, difficult families absorb days. Foreign, essential empl                                                               | Children   | infants | 1.52            | 12786.36    | 1.498819     |
| AAAAAAAAAIEEAAAA | Difficult, good children could not use pp.. Historical, equal wings shall take wit                                                                                                       | Children   | infants | 2.25            | 809.40      | 0.094878     |
| AAAAAAAAAJBDAAAA | Gates create models. Below desirable neighbours will feel yesterday english efforts. Good years help royal problems. Heavy,                                                              | Children   | infants | 1.29            | 1001.40     | 0.117384     |
| AAAAAAAAAKABAAAA | Technolog                                                                                                                                                                                | Children   | infants | 1.73            | 3079.11     | 0.360934     |
| AAAAAAAAAKBCAAAA | Civil damages hear a bit results. Advertisements shall finance never instances. Large authors used to enjoy as yet special recommend                                                     | Children   | infants | 8.87            | 24165.32    | 2.832663     |
| AAAAAAAAAKKCAAAA | More important companies get relations. Close new planes may not bring now domestic women. More happy facts swing most following rates; more different phenom                            | Children   | infants | 8.67            | 4779.20     | 0.560219     |
| AAAAAAAAAKNAAAAA | Always complete jews occur less bitter requirements. Female children complain firstly in a requirements. Working-class, good sons catch of course children; casually moral figures emplo | Children   | infants | 12.53           | 1033.20     | 0.121112     |
| AAAAAAAAALCEAAAA | S                                                                                                                                                                                        | Children   | infants | 4.50            | 2582.74     | 0.302749     |
| AAAAAAAAANKDAAAA | Decades receive. Parts survive straight managers. Clearly professional computers shall gauge requirements; e                                                                             | Children   | infants | 3.08            | 1951.60     | 0.228767     |
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
