crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-postgres_tpcds_q28.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q28"
---
+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
| B1_LP             | B1_CNT | B1_CNTD | B2_LP             | B2_CNT | B2_CNTD | B3_LP              | B3_CNT | B3_CNTD | B4_LP             | B4_CNT | B4_CNTD | B5_LP             | B5_CNT | B5_CNTD | B6_LP              | B6_CNT | B6_CNTD |
+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
| 56.47549529806652 | 36049  | 7003    | 90.92424567661391 | 31399  | 8235    | 61.574065263590875 | 29174  | 6522    | 69.69225856353592 | 36200  | 8320    | 89.28696293306841 | 32212  | 7930    | 106.97479703765808 | 28626  | 9058    |
+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
