crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-sqlite[file]_tpcds_q13.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q13"
---
+------------------------------+-------------------------------------+----------------------------------------+----------------------------------------+
| avg(store_sales.ss_quantity) | avg(store_sales.ss_ext_sales_price) | avg(store_sales.ss_ext_wholesale_cost) | sum(store_sales.ss_ext_wholesale_cost) |
+------------------------------+-------------------------------------+----------------------------------------+----------------------------------------+
|                              |                                     |                                        |                                        |
+------------------------------+-------------------------------------+----------------------------------------+----------------------------------------+
