crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-sqlite[file]_tpcds_q15.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q15"
---
++
++
