crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-sqlite[file]_tpcds_q21.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q21"
---
+---------------------+------------------+------------+-----------+
| w_warehouse_name    | i_item_id        | inv_before | inv_after |
+---------------------+------------------+------------+-----------+
| Conventional childr | AAAAAAAAHDAAAAAA | 2171       | 2759      |
| Conventional childr | AAAAAAAAMBAAAAAA | 2427       | 2495      |
| Conventional childr | AAAAAAAAPKAAAAAA | 2319       | 2866      |
+---------------------+------------------+------------+-----------+
