crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-sqlite[file]_tpcds_q28.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q28"
---
+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
| B1_LP             | B1_CNT | B1_CNTD | B2_LP             | B2_CNT | B2_CNTD | B3_LP             | B3_CNT | B3_CNTD | B4_LP             | B4_CNT | B4_CNTD | B5_LP             | B5_CNT | B5_CNTD | B6_LP              | B6_CNT | B6_CNTD |
+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
| 54.67652661064426 | 357    | 346     | 89.35197674418605 | 344    | 340     | 58.99055555555555 | 288    | 280     | 70.27353099730458 | 371    | 360     | 89.85203174603174 | 315    | 311     | 108.42878228782288 | 271    | 268     |
+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+-------------------+--------+---------+--------------------+--------+---------+
